--- a/css/main.css
+++ b/css/main.css
@@ -138,10 +138,10 @@ a {
     }
 
     .main__service__block {
-      display: block;
+      display: flex;
+      flex-direction: column;
       background-color: #fff;
       position: absolute;
-      /* left: 50%; */
       top: 350px;
       width: 80%;
       margin: 0 auto;
@@ -155,6 +155,58 @@ a {
       font-weight: 100;
       font-size: 32px;
     }
+
+    /* Main Service List */
+
+    .main__service__list {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      /* width: 100%; */
+    }
+
+      .main__service__item {
+        /* margin: 0 auto; */
+        text-align: center;
+        position: relative;
+        flex-basis: 30%;
+      }
+
+        .main__service__img {
+          margin: 0 auto;
+          width: 30px;
+          /* margin-bottom: 60px; */
+        }
+
+        .main__service__item__title {
+          margin-top: 60px;
+          font-family: 'Raleway', sans-serif;
+          font-weight: 900;
+        }
+
+        .main__service__item__text {
+          font-family: 'Raleway', sans-serif;
+          font-weight: 500;
+          /* Поменять размер шрифта в em */
+          font-size: 13px;
+          color: #474747;
+        }
+
+        .main__service__item__line {
+          margin: 0 auto;
+          margin: 30px auto;
+          width: 65px;
+          border: none;
+          background-color: #000;
+          color: #000;
+          height: 2px;
+
+        }
+
+    /* end of Main Service List */
+
+    /* hr */
     hr {
       width: 70px;
       color: #7f7f7f;
@@ -199,77 +251,7 @@ a {
   }
 
 
-  /* Main Service List */
 
-  .main__service__list {
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    margin-top: 300px;
-  }
-
-    .main__service__item {
-      text-align: center;
-      position: relative;
-      width: 300px;
-    }
-      .main__service__item::before {
-        position: absolute;
-        margin: 0 auto;
-        top: -35px;
-        left: 100px;
-        width: 95px;
-        height: 95px;
-        content: '\A';
-        background: #f0f0f0;
-        background-position: center;
-
-        z-index: -1;
-        transition: all 0.5s;
-
-      }
-
-      .main__service__item:hover::before {
-
-        width: 100%;
-        height: 100%;
-
-      }
-
-      .main__service__img {
-        margin: 0 auto;
-        width: 30px;
-        /* margin-bottom: 60px; */
-      }
-
-      .main__service__item__title {
-        margin-top: 60px;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 900;
-      }
-
-      .main__service__item__text {
-        font-family: 'Raleway', sans-serif;
-        font-weight: 500;
-        /* Поменять размер шрифта в em */
-        font-size: 13px;
-        color: #474747;
-      }
-
-      .main__service__item__line {
-        margin: 0 auto;
-        margin: 30px auto;
-        width: 65px;
-        border: none;
-        background-color: #000;
-        color: #000;
-        height: 2px;
-
-      }
-
-
-
-  /* end of Main Service List */
 
 
   /* End of Service Section */
