--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,14 @@ a {
 /*Header*/
 
 .header {
-	background-image: url('../img/bg.jpg');
+	background-image: url(../img/bg.jpg);
 
   width: 100%;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+
+  margin-bottom: 600px;
 }
 
 	.header__top {
@@ -150,6 +152,7 @@ a {
       box-shadow: 0 0px 0px 0 rgba(0,0,0,0.14), 0 0px 0px 0px rgba(0,0,0,0.12),0 -7px 5px 0 rgba(0,0,0,0.2);
     }
     .main__service__title {
+      text-align: center;
       padding-top: 50px;
       font-family: 'Playfair Display', serif;
       font-weight: 100;
@@ -206,6 +209,77 @@ a {
 
     /* end of Main Service List */
 
+    /* BG Line */
+
+    .main__bg-line {
+      background: url(../img/bg_line.jpg);
+      height: 230px;
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+
+      display: flex;
+      align-items: center;
+      align-content: center;
+
+      position: relative;
+    }
+    .main__bg-line::after {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      content: '';
+
+
+    }
+      .bg-line__text {
+        margin: 0 auto;
+        z-index: 1;
+
+        color: #e9e9e9;
+        font-family: 'Playfair';
+        font-weight: 100;
+        letter-spacing: 1px;
+        font-size: 23px;
+      }
+
+    /* end of BG Line */
+
+    .main__gallery {
+      background-color: #ededed;
+    }
+
+      .gallery__menu {
+        display: flex;
+        justify-content: center;
+      }
+
+        .gallery__menu__item {
+          margin: 15px;
+          margin-top: -15px;
+        }
+
+      .gallery__img__block {
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+        .gallery__img__item {
+          margin: 10px;
+        }
+
+    /* Main Gallery */
+
+
+
+    /* End of Main Gallery */
+
+
     /* hr */
     hr {
       width: 70px;
@@ -229,6 +303,7 @@ a {
     }
 
     .main__service__subtitle {
+      text-align: center;
       color: #4a4a4a;
       font-family: 'Raleway', sans-serif;
       font-weight: 500;
