--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,8 @@ a {
       }
 
 	.header__content {
-		display: flex;
+    margin: 0 auto;
+		display: none;
 		flex-direction: column;
 		align-items: center;
     position: relative;
@@ -233,8 +234,6 @@ a {
       height: 100%;
       background-color: rgba(0, 0, 0, 0.4);
       content: '';
-
-
     }
       .bg-line__text {
         margin: 0 auto;
@@ -248,6 +247,8 @@ a {
       }
 
     /* end of BG Line */
+
+    /* Main Gallery */
 
     .main__gallery {
       margin-top: -27px;
@@ -274,12 +275,79 @@ a {
           margin: 10px;
         }
 
-    /* Main Gallery */
+        .main__gallery__view-all {
+          margin: 0 0;
+          text-align: center;
 
+          color: #131313;
+
+          /* Поменять px на em */
+          font-size: 14px;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+
+          /* Поменять на нормальные значения */
+          padding-top: 15px;
+          padding-bottom: 45px;
+        }
 
 
     /* End of Main Gallery */
 
+    /* Partners */
+
+      .main__partners {
+      }
+
+        .partners__list {
+          display: flex;
+          justify-content: center;
+          padding: 60px 0 60px 0;
+        }
+
+          .partners__list__item img {
+            filter: grayscale(100%);
+            transition: filter 0.5s;
+          }
+          .partners__list__item:hover img {
+            filter: grayscale(0%);
+          }
+
+
+    /* End of  Parnters */
+
+    /* About Me */
+
+    .main__about {
+      background-image: url(../img/about/bg.jpg);
+
+      width: 100%;
+      height: 550px;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+
+      margin-bottom: 600px;
+      color: #fff;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      align-content: center;
+    }
+
+      .main__about::after {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        /* background-color: rgba(0, 0, 0, 0.4); */
+        /* background-color: red; */
+        content: '';
+      }
+
+    /* End of About Me */
 
     /* hr */
     hr {
@@ -311,6 +379,7 @@ a {
       margin: 0 10%;
       padding-bottom: 100px;
     }
+
 /*End of Header */
 
 /* Main */
@@ -336,7 +405,32 @@ a {
 
 
 /* Media Requests */
+
+@media screen and (max-width: 1155px) {
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .gallery__img__block li.gallery__img__item:nth-child(-n+2) {
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 1299px) {
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+}
 @media screen and (max-width: 768px) {
+
+    .container {
+      width: 90%;
+      margin: 0 auto;
+    }
 
     .header__nav {
       /* align-items: flex-end; */
