--- a/css/main.css
+++ b/css/main.css
@@ -329,22 +329,22 @@ a {
 
       margin-bottom: 600px;
       color: #fff;
-
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      align-content: center;
+      position: relative;
     }
+      .main__about h2, span, img {
+        z-index: 3;
+      }
 
-      .main__about::after {
+      .main__about::before {
         position: absolute;
         top: 0px;
         left: 0px;
         width: 100%;
         height: 100%;
-        /* background-color: rgba(0, 0, 0, 0.4); */
+        background-color: rgba(0, 0, 0, 0.4);
         /* background-color: red; */
         content: '';
+        /* z-index: -1; */
       }
 
     /* End of About Me */
