--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ h1 {
   margin: 0px;
   padding: 0px;
 }
+ul {
+  padding: 0;
+  margin: 0;
+}
 li {
 	list-style: none;
 }
@@ -36,6 +40,7 @@ a {
   width: 80%;
   margin: 0 auto;
 }
+
 /*Header*/
 
 .header {
@@ -46,7 +51,7 @@ a {
   background-position: center center;
   background-repeat: no-repeat;
 
-  margin-bottom: 600px;
+  /* margin-bottom: 600px; */
 }
 
 	.header__top {
@@ -99,7 +104,7 @@ a {
 
 	.header__content {
     margin: 0 auto;
-		display: none;
+		display: flex;
 		flex-direction: column;
 		align-items: center;
     position: relative;
@@ -144,20 +149,24 @@ a {
       display: flex;
       flex-direction: column;
       background-color: #fff;
-      position: absolute;
-      top: 350px;
+      /* position: absolute; */
+      /* top: 350px; */
       width: 80%;
       margin: 0 auto;
+      margin-top: 35px;
+      margin-bottom: 35px;
       text-align: center;
       border-radius: 2px;
-      box-shadow: 0 0px 0px 0 rgba(0,0,0,0.14), 0 0px 0px 0px rgba(0,0,0,0.12),0 -7px 5px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 0px 0px 0 rgba(0,0,0,0.14), 0 0px 0px 0px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);;
     }
+
     .main__service__title {
       text-align: center;
       padding-top: 50px;
       font-family: 'Playfair Display', serif;
       font-weight: 100;
       font-size: 32px;
+      margin-bottom: 0px;
     }
 
     /* Main Service List */
@@ -209,6 +218,21 @@ a {
         }
 
     /* end of Main Service List */
+
+    /*End of Header */
+
+    /* Main */
+
+    .main {
+      width: 100%;
+    }
+      /* Servce Section */
+
+      .main__service {
+        width: 100%;
+        /* text-align: center; */
+        /* margin: 0 auto; */
+      }
 
     /* BG Line */
 
@@ -319,35 +343,83 @@ a {
     /* About Me */
 
     .main__about {
-      background-image: url(../img/about/bg.jpg);
-
-      width: 100%;
+      background: url(../img/about/bg.jpg);
       height: 550px;
+      width: 100%;
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
 
-      margin-bottom: 600px;
-      color: #fff;
+      display: flex;
+      align-items: center;
+      align-content: center;
+
       position: relative;
+      color: #fff;
     }
-      .main__about h2, span, img {
-        z-index: 3;
+
+      .main__about .container {
+        z-index: 1;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
 
-      .main__about::before {
+      .main__about::after {
         position: absolute;
         top: 0px;
         left: 0px;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.4);
-        /* background-color: red; */
         content: '';
         /* z-index: -1; */
+
+      }
+
+      .main__about h2 {
+
+      }
+
+      .main__about__img {
+        width: 200px;
+        border-radius: 50%;
+        border: 2px solid rgba(244, 177, 48, 0.5);
+      }
+
+      .main__about__text {
+        padding-top: 35px;
+        text-align: center;
       }
 
     /* End of About Me */
+
+
+    /* Instagram Section */
+      .main__instagram {
+        margin-top: -27px;
+        /* margin-bottom: -17px; */
+        padding-bottom: 57px;
+        background-color: #ededed;
+      }
+
+      .main__instagram__list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+        .main__instagram__item {
+          padding: 10px;
+        }
+
+        .main__instagram__item img {
+          width: 250px;
+          height: 250px;
+        }
+
+    /* End of Instagram Section */
 
     /* hr */
     hr {
@@ -380,28 +452,68 @@ a {
       padding-bottom: 100px;
     }
 
-/*End of Header */
-
-/* Main */
-
-.main {
-  width: 100%;
-}
-  /* Servce Section */
-
-  .main__service {
-    width: 100%;
-    /* text-align: center; */
-    /* margin: 0 auto; */
-  }
-
-
-
 
 
   /* End of Service Section */
 
 /* End of Main */
+
+/* Footer  */
+
+  .footer {
+      /* background: url(../img/footer/bg.jpg); */
+      background-color: #171717;
+      /* height: 170px; */
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+
+      position: relative;
+      color: #fff;
+  }
+
+    /* .footer::after {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      content: '';
+    } */
+
+      .footer .container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 35px 0 35px 0;
+      }
+
+        .footer__social {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+          margin: 15px 0 15px 0;
+        }
+          .footer__social__item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 6px;
+            margin: 6px;
+            border: 2px solid #fff;
+            width: 25px;
+            height: 25px;
+          }
+          .footer__social__item:hover {
+            transition: all 0.3s;
+            background-color: #fff;
+            color: #171717;
+          }
+
+/* End of Footer */
 
 
 /* Media Requests */
