--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ a {
 	}
 
 		.header__content__title {
+      text-align: center;
       font-family: 'Playfair Display', serif;
       font-weight: 100;
       font-size: 45px;
@@ -307,7 +308,8 @@ a {
         }
 
       .gallery__img__block {
-
+        margin-top: 0px;
+        padding-bottom: 30px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -347,6 +349,7 @@ a {
         }
 
           .partners__list__item img {
+            width: 100%;
             filter: grayscale(100%);
             transition: filter 0.5s;
           }
@@ -418,6 +421,7 @@ a {
 
     /* Instagram Section */
       .main__instagram {
+        display: none;
         margin-top: -27px;
         /* margin-bottom: -17px; */
         padding-bottom: 57px;
@@ -469,7 +473,7 @@ a {
       font-family: 'Raleway', sans-serif;
       font-weight: 500;
       margin: 0 10%;
-      padding-bottom: 100px;
+      margin-bottom: 30px;
     }
 
 
@@ -517,17 +521,18 @@ a {
           align-content: center;
           margin: 15px 0 15px 0;
         }
-          .footer__social__item {
+          .footer__social a {
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 6px;
             margin: 6px;
-            border: 2px solid #fff;
+            /* border: 2px solid #fff; */
+            font-size: 1.9em;
             width: 25px;
             height: 25px;
           }
-          .footer__social__item:hover {
+          .footer__social a:hover {
             transition: all 0.3s;
             background-color: #fff;
             color: #171717;
@@ -584,6 +589,7 @@ a {
           border: 1px solid #ffb932;
           background-color: rgba(255, 185, 50, 0.5);
           padding: 9px 15px;
+          z-index: 1;
       }
         .header__nav__item:hover {
           /* background-color: rgba(255, 185, 50, 1); */
@@ -599,5 +605,17 @@ a {
         display: block;
     }
 
+}
+
+/* 480px */
+@media screen and (max-width: 480px) {
+  .container {
+  }
+  .gallery__img__item {
+    width: 100%;
+  }
+  .gallery__img__item img {
+    width: 100%;
+  }
 }
 /* End of Media Requests */
