--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/* The Churchill Project */
+/* Site by: */
+/* Gregory Manov */
+/* 2018 */
+
 /*Fonts*/
 
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display:400italic);
@@ -10,6 +15,9 @@
 }
 
 
+.needJs::before {
+  content: 'JavaScript';
+}
 /* End fonts */
 
 body {
